tooltips: increase z-index to show tooltips in dialogs and remove tooltips if underlying element is removed from the dom, fixes #5879
git-svn-id: svn://develop.studip.de/studip/trunk@34884 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/tooltip.less
+++ b/public/assets/stylesheets/less/tooltip.less
@@ -16,7 +16,7 @@
     text-align: left;
     text-shadow: 0 1px 0 fade(#fff, 50%);
     white-space: normal;
-    z-index: 1003;
+    z-index: 10000;
 
     .hyphens();
 }
