--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4110,7 +4110,7 @@ div.clear {
   text-align: left;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   white-space: normal;
-  z-index: 1003;
+  z-index: 10000;
   word-wrap: break-word;
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
@@ -4205,7 +4205,7 @@ div.clear {
   text-align: left;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   white-space: normal;
-  z-index: 1003;
+  z-index: 10000;
   word-wrap: break-word;
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
